Update and rename README.md to README.mdx

--- a/README.mdx
+++ b/README.mdx
@@ -1,9 +1,7 @@
 # Hi, I'm William!  👋
-
-#### I'm a learner who uses programming to make other people's lives easier. 
-
-- 💻 I've got 3+ years of experience in programming.
-- 🗣️ Fluent in both Portuguese and English.
+<div class="card">
+Software Engineer working at Azion.
+</div>
 
 #### Contacts
 <div>
@@ -51,3 +49,15 @@
   <img align="center" alt="docker" height="30" width="40" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/docker/docker-plain.svg">
   <img align="center" alt="heroku" height="30" width="40" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/heroku/heroku-plain.svg">
 </div>
+
+<style>
+  .card {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 1.5rem;
+    border-radius: 0.5rem;
+  }
+</style>
+
